# img2ascii

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  configure.sh  debug.sh  install.sh  release.sh
.cache/clangd/index/: img2ascii.h.8D2A0E6511A4F7E6.idx  main.c.C6B877FF2E445323.idx  stb_image.h.4D1B171AF3DD21F1.idx  stb_image_resize2.h.0E05FB98A15881AF.idx
include/: redflag.h  stb_image_resize2.h
src/: args.c  args.h  color.c  color.h  debug.h  image.c  image.h  img2ascii.c  img2ascii.h  main.c
